--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,4 +6,6 @@ EXPOSE 80
 
 COPY ./app /app
 
+HEALTHCHECK --interval=5s --timeout=3s --retries=3 CMD curl -f http://localhost:80 || exit 1
+
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "80"]
